# textor-studio

./: CMakeLists.txt  install.sh
docs/: LICENSE  README.md
src/: buffer.cpp  buffer.hpp  commands.hpp  editor.cpp  editor.hpp  fileio.cpp  fileio.hpp  main.cpp  renderer.cpp  renderer.hpp  terminal.cpp  terminal.hpp  version.hpp
